<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Title Properties -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Save, Delete and Update Button Properties -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginBottom="25dp"
        android:text="@string/saveButton"
        app:iconPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginBottom="25dp"
        android:text="@string/deleteButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="@+id/divider3" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginBottom="25dp"
        android:text="@string/updateButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deleteButton" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addressInput"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <!-- Address, City, Province/State and Country TextInput Properties -->
    <EditText
        android:id="@+id/addressInput"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/addressHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <View
        android:id="@+id/divider3"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- latitude and longitude text values -->
    <TextView
        android:id="@+id/latitude"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_marginTop="65dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/latitude"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressInput" />

    <TextView
        android:id="@+id/latitudeOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/latitudeVal"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitude" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="112dp"
        android:layout_height="28dp"
        android:layout_marginTop="75dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/longitude"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitudeOutput" />

    <TextView
        android:id="@+id/longitudeOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/longitudeVal"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitude" />





</androidx.constraintlayout.widget.ConstraintLayout>